--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,12 @@
   display: flex;
 } */
 
-.chat_sec {
+.adver_side_chat {
   display: flex;
-  padding-left: 36%;
+ //padding-left: 36%;
   padding-top: 2%;
-  margin-right: 4%;
+  padding-bottom: 2%;
+  margin-right: 2%;
+  margin-left: 2%;
   box-sizing: border-box;
 }
