--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,14 @@
   margin-left: 2%;
   box-sizing: border-box;
 }
+
+.sidebar{
+  display:flex;
+  max-height:90vh;
+  margin-left: 2%;
+}
+
+.chat{
+  display:flex;
+  max-height:90vh;
+}
