--- a/src/components/Upper.css
+++ b/src/components/Upper.css
@@ -9,7 +9,7 @@ body {
 }
 
 .nav-list {
-  background: white;
+  background: rgb(128, 128, 128);
   box-shadow: 0px 0px 10px #cfd8dc;
   margin: 0;
   padding: 1rem 0;
