--- a/src/components/SideCard.css
+++ b/src/components/SideCard.css
@@ -1,5 +1,21 @@
 .card{
     margin-top: 2rem;
-    margin-left: 1rem;
+    margin-left: 6rem;
     padding: 1rem;
+    margin-bottom: 1rem;
+}
+
+.card-img-top {
+    width: 20%;
+    height: 15vh;
+    object-fit: contain;
+    margin-left: 5rem;
+}
+
+.para{
+    font-size: 22px;
+}
+
+.para-below{
+    font-size: 14px;
 }
