--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,10 @@
   display: flex;
   padding-top: 2%;
   padding-bottom: 2%;
-  margin-right: 2%;
-  margin-left: 2%;
+  padding-right: 2%;
+  padding-left: 2%;
   box-sizing: border-box;
+  background: #eee;
 }
 
 .sidebar{
