--- a/src/components/Chat.css
+++ b/src/components/Chat.css
@@ -2,14 +2,14 @@
   display: flex;
   flex-direction: column;
   flex: 0.75;
-  background-color: white;
+  background: #eee;
   height: 100vh;
 }
 .chat_messages {
   flex: 1;
 }
 .chat_input {
-  color: rgb(32, 32, 32);
+  color: rgb(0, 0, 0);
   display: flex;
   align-items: center;
   justify-content: space-between;
