--- a/src/components/Rewards.css
+++ b/src/components/Rewards.css
@@ -6,6 +6,19 @@
   box-sizing: border-box;
   text-decoration: none;
 }
+.bg{
+   background-image: url("https://i.imgur.com/wHWCiyl.jpeg");
+    height: 100%;
+    width: 100%;
+   background-position: center;
+   background-repeat: no-repeat;
+   background-size: cover;
+   display: flex;
+  align-items: center;
+  justify-content: center;
+
+} 
+
 
 .profile {
   position: fixed;
