--- a/src/components/SidebarChannel.css
+++ b/src/components/SidebarChannel.css
@@ -7,7 +7,7 @@
   display: flex;
   padding-left: 15px;
   align-items: center;
-  background-color: #fff6f7;
+  background-color: white;
   color: black;
   cursor: pointer;
   font-size: 16px;
