--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   flex: 0.25;
   height: 100vh;
-  background-color: #fff6f7;
+  background-color: white;
   /* background: linear-gradient(#e66465, #9198e5); */
 }
 
@@ -12,7 +12,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 20px;
-  background-color: #fff6f7;
+  background-color: white;
   color: black;
   border-bottom: 1px solid #26282c;
 }
@@ -32,7 +32,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px;
-  background-color: #fff6f7;
+  background-color: white;
   color: black;
 }
 .sidebar_header {
@@ -49,7 +49,7 @@
   justify-content: space-between;
   align-items: center;
   color: black;
-  background-color: #fff6f7;
+  background-color: white;
   padding: 10px;
   border-top: 1px solid black;
 }
