--- a/src/components/Upper.css
+++ b/src/components/Upper.css
@@ -20,12 +20,24 @@ body {
 }
 
 .color-nav{
-  background-color: rgb(95,174,31);
+  background-color: #e66465;
 }
+
+.gradient-text {
+    background-color: #f3ec78;
+    background-image: linear-gradient(#E72744, #F13AB1);
+    background-size: 100%;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent; 
+    -moz-text-fill-color: transparent;
+}
+
 
 .navbar,
 .navbar-default {
-    background-image: linear-gradient(to bottom,#ff516c 0,#ff516c 100%) !important; /* override background image gradient w/ flat color */
+    background-image: linear-gradient(to bottom,white 0,white
+     100%) !important; /* override background image gradient w/ flat color */
 }
 
 .list-item {
