--- a/src/components/Discussion.css
+++ b/src/components/Discussion.css
@@ -1,10 +1,11 @@
-.discussion-forum {
+.discussion-main {
   display: flex;
 }
-.forums-section {
-  flex: 1;
+.discussion-section {
+  flex: 2;
   position: relative;
   text-align: center;
+  right: 150px;
   top: 10px;
   margin: 10px;
   padding: 20px;
