--- a/src/components/Order.css
+++ b/src/components/Order.css
@@ -3,7 +3,7 @@
   float: right;
   margin-right: 20px;
   margin-top: 10px;
-  background-color: grey;
+  background-color: #eee;
   border-radius: 25px;
   height: 70%;
 }
