--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url("http://fonts.cdnfonts.com/css/black-jack");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Roboto&display=swap");
 
 .login {
   display: grid;
@@ -10,17 +11,25 @@
 
 .login > button {
   width: 300px;
-  background-color: #e212f5;
+  background-color: #e66465;
   color: #eff2f5;
   font-weight: 800;
+  font-family: "Roboto", sans-serif;
 }
 
 .login > button:hover {
   background-color: black;
-  color: #e212f5;
+  color: #e66465;
 }
 
 .login > div > img {
   object-fit: contain;
   height: 150px;
+}
+.title {
+  position: relative;
+  top: 50px;
+  font-size: 100px;
+  font-family: "BlackJack", sans-serif;
+  color: white;
 }
