--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -144,16 +144,24 @@
   }
   
   .socialMediaButtons {
-    padding: 10px 100px 10px 0px;
+    padding: 0px
   }
 
-  .imgMyn{
-    padding: 2px  9px 2px 0px;
+  .btn-goog{
+    background-color: #6B5B95;
+    border: none;
+    padding: 7px 40px 7px 40px;
+    margin-right: 20px;
+    border-radius: 25px;
+    border: none;
+    outline: none;
   }
-  .imgFac{
-    padding-right: 9px;
+  .text-button{
+    font-size: 0.6em;
+    font-weight: 500;
   }
-  .imgGog{
-    padding-right: 9px;
+  .btn-image{
+    padding-right: 15px;
+    margin-left: -10px;
   }
   
